[package]
name = "file-code-boxr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-rt = "2.10.0"
actix-web = "4.7.0"
config = "0.14.0"
env_logger = "0.11.3"
log = "0.4.22"
sanitize-filename = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tempfile = "3.10.1"
uuid = { version = "1.10.0", features = ["v4"] }
futures-util = "0.3.30"
